--- a/style.css
+++ b/style.css
@@ -30,8 +30,10 @@ footer{
     border-style: double;
     background-color: #5e95e4;
     color: white;
-    bottom: 0;
-    width: 98%;
+    width: 100%;
+    position: unset;
+    bottom:0%;
+    
 }
 div{
     width: 100%;
